-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 12
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8235506 | 11.0.7 | Jiangli Zhou | P3 | Resolved | Fixed | b01 |
Crash is observed when doing CDS dumping with "java -Xshare:dump -XX:AutoBoxCacheMax=2000000 -Xmx1g -XX:NewSize=1g" :
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fb01e4b86f6, pid=26861, tid=26868
#
# JRE version: Java(TM) SE Runtime Environment (12.0) (build 12-internal+0-2018-07-13-1446399.clredest.jdk)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (12-internal+0-2018-07-13-1446399.clredest.jdk, interpreted mode, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x8746f6] void OopOopIterateDispatch<WalkOopAndArchiveClosure>::Table::oop_oop_iterate<ObjArrayKlass, unsigned int>(WalkOopAndArchiveClosure*, oopDesc*, Klass*)+0x406
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/clredest/src/jdk/core.26861)
#
# An error report file with more information is saved as:
# /home/clredest/src/jdk/hs_err_pid26861.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Aborted (core dumped)
Thanks Claes for reporting the issue.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fb01e4b86f6, pid=26861, tid=26868
#
# JRE version: Java(TM) SE Runtime Environment (12.0) (build 12-internal+0-2018-07-13-1446399.clredest.jdk)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (12-internal+0-2018-07-13-1446399.clredest.jdk, interpreted mode, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x8746f6] void OopOopIterateDispatch<WalkOopAndArchiveClosure>::Table::oop_oop_iterate<ObjArrayKlass, unsigned int>(WalkOopAndArchiveClosure*, oopDesc*, Klass*)+0x406
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/clredest/src/jdk/core.26861)
#
# An error report file with more information is saved as:
# /home/clredest/src/jdk/hs_err_pid26861.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Aborted (core dumped)
Thanks Claes for reporting the issue.
- backported by
-
JDK-8235506 SIGSEGV in WalkOopAndArchiveClosure::do_oop_work
-
- Resolved
-