8209389: SIGSEGV in WalkOopAndArchiveClosure::do_oop_work

Check the MetaspaceShared::archive_heap_object return value and handle failure accordingly.

Reviewed-by: iklam, coleenp